--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,579 @@
-body,h1,h2,h3,h4,h5,h6,p,blockquote,pre,hr,dl,dd,ol,ul,figure{margin:0;padding:0}body{font-family:"Droid Sans",Helvetica,Arial,sans-serif;font-size:16px;line-height:1.5;font-weight:300;color:#111;background-color:#fdfdfd;-webkit-text-size-adjust:100%}h1,h2,h3,h4,h5,h6,p,blockquote,pre,ul,ol,dl,figure,.highlight{margin-bottom:15px}img{max-width:100%;vertical-align:middle}figure>img{display:block}figcaption{font-size:14px}ul,ol{margin-left:30px}li>ul,li>ol{margin-bottom:0}h1,h2,h3,h4,h5,h6{font-weight:300}a{color:#2a7ae2;text-decoration:none}a:visited{color:#1756a9}a:hover{color:#111;text-decoration:underline}blockquote{color:#828282;border-left:4px solid #e8e8e8;padding-left:15px;font-size:18px;letter-spacing:-1px;font-style:italic}blockquote>:last-child{margin-bottom:0}pre,code{font-size:15px;border:1px solid #e8e8e8;border-radius:3px;background-color:#eef}code{padding:1px 5px}pre{padding:8px 12px;overflow-x:scroll}pre>code{border:0;padding-right:0;padding-left:0}.wrapper{max-width:-webkit-calc(800px - (30px * 2));max-width:calc(800px - (30px * 2));margin-right:auto;margin-left:auto;padding-right:30px;padding-left:30px}@media screen and (max-width: 800px){.wrapper{max-width:-webkit-calc(800px - (30px));max-width:calc(800px - (30px));padding-right:15px;padding-left:15px}}.wrapper:after,.footer-col-wrapper:after{content:"";display:table;clear:both}.icon>svg{display:inline-block;width:16px;height:16px;vertical-align:middle}.icon>svg path{fill:#828282}.site-header{border-top:5px solid #424242;border-bottom:1px solid #e8e8e8;min-height:56px;position:relative}.site-title{font-size:26px;line-height:56px;letter-spacing:-1px;margin-bottom:0;float:left;color:#DD4814}.site-title,.site-title:visited{color:#424242}.site-nav{float:right;line-height:56px}.site-nav .menu-icon{display:none}.site-nav .page-link{color:#111;line-height:1.5}.site-nav .page-link:not(:first-child){margin-left:20px}@media screen and (max-width: 600px){.site-nav{position:absolute;top:9px;right:30px;background-color:#fdfdfd;border:1px solid #e8e8e8;border-radius:5px;text-align:right}.site-nav .menu-icon{display:block;float:right;width:36px;height:26px;line-height:0;padding-top:10px;text-align:center}.site-nav .menu-icon>svg{width:18px;height:15px}.site-nav .menu-icon>svg path{fill:#424242}.site-nav .trigger{clear:both;display:none}.site-nav:hover .trigger{display:block;padding-bottom:5px}.site-nav .page-link{display:block;padding:5px 10px}}.site-footer{border-top:1px solid #e8e8e8;padding:30px 0}.footer-heading{font-size:18px;margin-bottom:15px}.contact-list,.social-media-list{list-style:none;margin-left:0}.footer-col-wrapper{font-size:15px;color:#828282;margin-left:-15px}.footer-col{float:left;margin-bottom:15px;padding-left:15px}.footer-col-1{width:-webkit-calc(35% - (30px / 2));width:calc(35% - (30px / 2))}.footer-col-2{width:-webkit-calc(20% - (30px / 2));width:calc(20% - (30px / 2))}.footer-col-3{width:-webkit-calc(45% - (30px / 2));width:calc(45% - (30px / 2))}@media screen and (max-width: 800px){.footer-col-1,.footer-col-2{width:-webkit-calc(50% - (30px / 2));width:calc(50% - (30px / 2))}.footer-col-3{width:-webkit-calc(100% - (30px / 2));width:calc(100% - (30px / 2))}}@media screen and (max-width: 600px){.footer-col{float:none;width:-webkit-calc(100% - (30px / 2));width:calc(100% - (30px / 2))}}.page-content{padding:30px 0}.page-heading{font-size:20px}.post-list{margin-left:0;list-style:none}.post-list>li{margin-bottom:30px}.post-meta{font-size:14px;color:#828282}.post-link{display:block;font-size:24px}.post-header{margin-bottom:30px}.post-title{font-size:42px;letter-spacing:-1px;line-height:1}@media screen and (max-width: 800px){.post-title{font-size:36px}}.post-content{margin-bottom:30px}.post-content h2{font-size:32px}@media screen and (max-width: 800px){.post-content h2{font-size:28px}}.post-content h3{font-size:26px}@media screen and (max-width: 800px){.post-content h3{font-size:22px}}.post-content h4{font-size:20px}@media screen and (max-width: 800px){.post-content h4{font-size:18px}}.highlight{background:#fff}.highlight .c{color:#998;font-style:italic}.highlight .err{color:#a61717;background-color:#e3d2d2}.highlight .k{font-weight:bold}.highlight .o{font-weight:bold}.highlight .cm{color:#998;font-style:italic}.highlight .cp{color:#999;font-weight:bold}.highlight .c1{color:#998;font-style:italic}.highlight .cs{color:#999;font-weight:bold;font-style:italic}.highlight .gd{color:#000;background-color:#fdd}.highlight .gd .x{color:#000;background-color:#faa}.highlight .ge{font-style:italic}.highlight .gr{color:#a00}.highlight .gh{color:#999}.highlight .gi{color:#000;background-color:#dfd}.highlight .gi .x{color:#000;background-color:#afa}.highlight .go{color:#888}.highlight .gp{color:#555}.highlight .gs{font-weight:bold}.highlight .gu{color:#aaa}.highlight .gt{color:#a00}.highlight .kc{font-weight:bold}.highlight .kd{font-weight:bold}.highlight .kp{font-weight:bold}.highlight .kr{font-weight:bold}.highlight .kt{color:#458;font-weight:bold}.highlight .m{color:#099}.highlight .s{color:#d14}.highlight .na{color:teal}.highlight .nb{color:#0086B3}.highlight .nc{color:#458;font-weight:bold}.highlight .no{color:teal}.highlight .ni{color:purple}.highlight .ne{color:#900;font-weight:bold}.highlight .nf{color:#900;font-weight:bold}.highlight .nn{color:#555}.highlight .nt{color:navy}.highlight .nv{color:teal}.highlight .ow{font-weight:bold}.highlight .w{color:#bbb}.highlight .mf{color:#099}.highlight .mh{color:#099}.highlight .mi{color:#099}.highlight .mo{color:#099}.highlight .sb{color:#d14}.highlight .sc{color:#d14}.highlight .sd{color:#d14}.highlight .s2{color:#d14}.highlight .se{color:#d14}.highlight .sh{color:#d14}.highlight .si{color:#d14}.highlight .sx{color:#d14}.highlight .sr{color:#009926}.highlight .s1{color:#d14}.highlight .ss{color:#990073}.highlight .bp{color:#999}.highlight .vc{color:teal}.highlight .vg{color:teal}.highlight .vi{color:teal}.highlight .il{color:#099}
+@charset "UTF-8";
+/*
+
+  Pixyll
+
+  A simple, beautiful theme for Jekyll that emphasizes content rather than
+  aesthetic fluff.
+
+  Best served with BASSCSS (http://jxnblk.github.io/basscss)
+
+  Crafted with <3 by John Otander (@4lpine) - ©2014 John Otander
+  MIT License http://opensource.org/licenses/MIT
+
+*/
+
+body {
+  font-family: "Droid Sans", "Ubuntu", "Helvetica", sans-serif;
+}
+
+html, body {
+  height: 100%;
+}
+
+img {
+  width: auto;
+  max-width: 100%;
+}
+
+.site-wrap {
+  min-height: 100%;
+  margin-bottom: -120px;
+}
+
+.site-wrap:after {
+  content: "";
+  display: block;
+}
+
+.footer, .site-wrap:after {
+  height: 120px;
+}
+
+body {
+  font-size: 1em;
+
+          box-sizing: border-box;
+     -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+.gist,
+.gist .highlight .p {
+  font-size: .75rem;
+}
+
+.gist .lines {
+  width: 100%;
+}
+
+.site-header a {
+  color: #ebebeb;
+  font-weight: 300;
+  background: #0f638c;
+  padding: 12px 8px;
+}
+
+.site-header nav a {
+  font-size: 1.3rem;
+  color: #ebebeb;
+}
+
+.site-nav a + a {
+  margin-left: 1em;
+}
+
+.site-nav {
+  padding-top: 0.75em;
+}
+
+.related-post-title {
+  border-bottom: thin solid #f3f3f3;
+}
+
+.posts {
+  margin-top: 0.5rem;
+}
+
+.posts .post {
+  margin-bottom: 0.75em;
+  padding-bottom: .375em;
+  border-bottom: thin solid #f3f3f3;
+}
+
+.posts .post:last-child {
+  border-bottom: none;
+  margin-bottom: .375em;
+  padding-bottom: 0;
+}
+
+.post-link .post-title {
+  margin-top: 0;
+  font-weight: 600;
+  color: #333;
+}
+
+.post-footer {
+  @extend .italic;
+
+  margin-top: .75rem;
+  text-align: center;
+}
+
+.post-footer .avatar {
+  margin: 2rem 0;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.pagination,
+.button {
+  font-size: 1rem;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 300;
+  text-align: center;
+}
+
+.pagination a, .pagination .disabled {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background: #fafafa;
+  border-radius: 0.1875em;
+  border: 1px solid #f3f3f3;
+  color: #333333;
+  padding: 1em 1.5em;
+}
+
+.pagination .disabled {
+  opacity: 0.5;
+}
+
+.pagination a:hover, .pagination a:focus {
+  background: white;
+  color: #477dca;
+}
+
+.pagination a:active {
+  background: #f7f7f7;
+}
+
+.wrap .measure {
+  margin: 0 auto;
+}
+
+.meta,
+.post-meta {
+  width: auto;
+  font-weight: 300;
+  color: #7a7a7a;
+  font-style: italic;
+}
+
+.pagination .button {
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.button-disabled {
+  opacity: 0.55;
+  background-color: #999;
+}
+
+.button-disabled:hover,
+.button-disabled:active,
+.button-disabled:focus {
+  cursor: not-allowed;
+  background-color: #999;
+}
+
+form {
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+textarea.input {
+  height: 8em;
+}
+
+p {
+  font-weight: 300;
+  line-height: 1.5;
+  color: #333;
+}
+
+abbr {
+  border-bottom: 1px black dotted;
+  cursor: help;
+}
+
+pre, code {
+  font-family: Menlo, Monaco, "Courier New", monospace
+}
+
+code {
+  color: #0F638C;
+  background: #ddd;
+  padding: 2px;
+}
+
+pre {
+  padding: 1.125em;
+  font-size: 1rem;
+  line-height: 1.11;
+  margin-bottom: 0.88em;
+}
+
+.highlight .p {
+  font-size: 1.125rem;
+  line-height: 1;
+}
+
+blockquote {
+  padding: 1.33em;
+  font-style: italic;
+  border-left: 5px solid #7a7a7a;
+}
+
+blockquote footer {
+  font-size: .85rem;
+  font-style: normal;
+  background-color: #fff;
+  color: #7a7a7a;
+  border-color: transparent;
+}
+
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  font-family: "Droid Sans", "Ubuntu", "Helvetica", sans-serif;
+  font-weight: 900;
+  line-height: 1.2;
+  margin: 0.414em 0 0.5em;
+}
+
+.social-icons {
+    padding: 0.5em 0 0 0;
+    font-size: 1.25rem;
+    width: 100%;
+}
+.social-icons a.fa {
+    padding: 0.2em;
+    opacity: 0.8;
+    cursor: pointer;
+}
+.social-icons a.fa:hover {
+    opacity: 1;
+}
+.social-icons iframe[title=Flattr] {
+    position: relative;
+    top: 0.1em;
+}
+
+@media screen and (min-width: 48em) {
+  .site-header .site-title {
+    float: left;
+    font-size: 1.5rem;
+    margin-right: 1em;
+  }
+
+  .meta,
+  .post-meta {
+    font-size: 0.8rem;
+  }
+
+  .h1,
+  h1 {
+    font-size: 3.250rem;
+  }
+
+  .h2,
+  h2 {
+    font-size: 2.298rem;
+  }
+
+  .h3,
+  h3 {
+    font-size: 1.625rem;
+  }
+
+  .h4,
+  h4 {
+    font-size: 1.150rem;
+  }
+
+  .p,
+  p,
+  li {
+    font-size: 1rem;
+    /* line-height: 1.8; */
+  }
+
+  .small {
+    font-size: 1rem;
+  }
+
+  .post-link .post-title {
+    margin-top: 0.5em;
+  }
+
+  .posts .post {
+    margin-bottom: 1.333em;
+    padding-bottom: 0.666em;
+    border-bottom: thin solid #f3f3f3;
+  }
+
+  .posts .post:last-child {
+    border-bottom: none;
+    margin-bottom: .333em;
+    padding-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 48em) {
+  .h1,
+  h1 {
+    font-size: 2.827rem;
+  }
+
+  .h2,
+  h2 {
+    font-size: 1.999rem;
+  }
+
+  .h3,
+  h3 {
+    font-size: 1.413rem;
+  }
+
+  .h4,
+  h4 {
+    font-size: 1rem;
+  }
+
+  .site-header {
+    text-align: center;
+  }
+
+  .site-header .site-title {
+    float: center;
+  }
+
+  .site-header .site-nav {
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-top: 0.666em;
+    margin-bottom: 1.333em;
+  }
+
+  .social-icons .left, .social-icons .right {
+    text-align: center;
+    float: none;
+  }
+}
+
+@media screen and (min-width: 64em) {
+  .h1,
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .h2,
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  .h3,
+  h3 {
+    font-size: 2.249rem;
+  }
+
+  .h4,
+  h4 {
+    font-size: 1.591rem;
+  }
+
+  .posts .post-meta .post-author {
+    padding-bottom: .2em;
+  }
+
+  .post-link .post-title {
+    margin-top: .125em;
+  }
+
+  .posts .post {
+    margin-bottom: 2.8em;
+    padding-bottom: 1.333em;
+    border-bottom: 1px dashed #999;
+  }
+
+  .posts .post:last-child {
+    border-bottom: none;
+    margin-bottom: .666em;
+    padding-bottom: 0;
+  }
+}
+
+footer {
+}
+
+footer,
+footer .wrap {
+  color: #7a7a7a;
+  background-color: #ebebeb;
+  font-weight: 300;
+  clear: both;
+}
+
+footer:after {
+  content: "";
+  display: block;
+}
+
+@charset "UTF-8";
+
+/*!
+Icons.css
+Licensed under the MIT license - http://opensource.org/license/MIT
+*/
+
+.icons a {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    margin: 10px;
+    vertical-align: middle;
+    -o-transition: all .3s;
+    -moz-transition: all .3s;
+    -webkit-transition: all .3s;
+    -ms-transition: all .3s;
+}
+
+.icons a.rss { background: url(/images/icons/rss.png) left top no-repeat; }
+.icons a.twitter { background: url(/images/icons/twitter.png) left top no-repeat; }
+
+/*!
+Animate.css - http://daneden.me/animate
+Licensed under the MIT license - http://opensource.org/licenses/MIT
+
+Copyright (c) 2014 Daniel Eden
+*/
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animated.infinite {
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+.animated.hinge {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+
+    -webkit-transform: translateY(-20px) translate3d(0, 0, 0);
+        -ms-transform: translateY(-20px) translate3d(0, 0, 0);
+            transform: translateY(-20px) translate3d(0, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+
+    -webkit-transform: translateY(0) translate3d(0, 0, 0);
+        -ms-transform: translateY(0) translate3d(0, 0, 0);
+            transform: translateY(0) translate3d(0, 0, 0);
+  }
+}
+
+.fade-in-down {
+  -webkit-animation-name: fadeInDown;
+          animation-name: fadeInDown;
+}
+/* Pagination */
+.paginatin_area{
+  margin: 0;
+  overflow: hidden;
+  padding: 4px 0 94px;
+  text-align: center;
+}
+.paginatin_area ul{
+  display: inline-block;
+  list-style: none outside none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+}
+.paginatin_area ul li{
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+}
+.paginatin_area ul li a{
+  background: none repeat scroll 0 0 #262626;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-family: lato;
+  font-size: 14px;
+  font-weight: 900;
+  line-height: 17px;
+  margin: 2px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 6px;
+  text-decoration: none;
+  -moz-transition:all .4s;
+  -webkit-transition:all .4s;
+  -ms-transition:all .4s;
+  -o-transition:all .4s;
+  transition:all .4s;
+}
+.paginatin_area ul li.active a{
+  background:#b3b3b1;
+}
+.paginatin_area ul li.active a:hover{
+  background:#b3b3b1;
+}
+.paginatin_area ul li a:hover{
+  background:#37C392;
+}
+.paginatin_area ul li a i{}
+.p_arrow{}
+.p_arrow i{
+  display: block;
+  font-family: lato;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 12px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
