--- a/css/main.css
+++ b/css/main.css
@@ -125,13 +125,14 @@ body {
 }
 
 .pagination a, .pagination .disabled {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  background: #fafafa;
-  border-radius: 0.1875em;
-  border: 1px solid #f3f3f3;
-  color: #333333;
+  /*-webkit-transition: all 0.2s ease-in-out;*/
+  /*-moz-transition: all 0.2s ease-in-out;*/
+  /*transition: all 0.2s ease-in-out;*/
+  /*background: #fafafa;*/
+  /*border-radius: 0.1875em;*/
+  /*border: 1px solid #f3f3f3;*/
+  color: #0f638c;
+  text-decoration: underline;
   padding: 1em 1.5em;
 }
 
@@ -139,10 +140,10 @@ body {
   opacity: 0.5;
 }
 
-.pagination a:hover, .pagination a:focus {
-  background: white;
-  color: #477dca;
-}
+/*.pagination a:hover, .pagination a:focus {*/
+  /*background: white;*/
+  /*color: #477dca;*/
+/*}*/
 
 .pagination a:active {
   background: #f7f7f7;
